# penguin-union

./: .gitignore  .prettierignore  example.html  index.html  pyproject.toml  template.html  tsconfig.json
contact/: index.html
example-page/: index.html
idea-list/: index.html
our-team/: index.html
password-generator/: index.html
polka-dots/: index.html
polka-dots/request/: index.html
scripts/: fit-size.js  fit-size.ts  main.js  password-generator.js  password-generator.ts  polka-dot-game.js  polka-dot-game.ts  sttt.ts
styles/: article.css  base.css  example-page.css  example.css  fit-size.css  idea-list.css  main.css  minimum.css  our-team.css  password-generator.css  polka-dot-copy.css  requests.css  sttt.css
super-tic-tac-toe/: index.html
webhooking/: post_message.py
